Added a few pages and simple navigation

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
 
-		T
 		<h1>Astro is fun in October.</h1>
+        <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
 	</body>
 </html>
