--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,7 +15,11 @@
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
 
-		T
 		<h1>Astro is fun in October.</h1>
+
+        <h1>My Astro Learning Blog</h1>
+        <p>This is where I will post about my journey learning Astro.</p>
+
+        <p>Nothing more to <b>blog</b> about just yet.</p>
 	</body>
 </html>
