--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+const pageTitle = "Home Page";
+
 ---
 
 <html lang="en">
@@ -7,7 +9,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
 
@@ -16,6 +18,7 @@
         <a href="/blog/">Blog</a>
 
 		
-		<h1>Astro is fun in October.</h1>
+		<!-- <h1>Astro is fun in October.</h1> -->
+		<h1>{pageTitle}</h1>
 	</body>
 </html>
