--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,6 +20,11 @@ const goal = 3;
 // footwear = "boots";
 // student = false;
 
+// Declare 'CSS variables' (in JavaScript)
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -29,6 +34,20 @@ const goal = 3;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+
+    <!-- <style define:vars={{ skillColor }}> -->
+    <style define:vars={{ skillColor, fontWeight, textCase }}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
   </head>
   <body>
     <a href="/">Home</a>
@@ -48,6 +67,7 @@ const goal = 3;
       back and see how my journey is going!
     </p>
 
+    <p>Am I still dynamic?</p>
     <p>Here are a few facts about me:</p>
     <ul>
       <li>My name is {identity.firstName}.</li>
@@ -66,7 +86,7 @@ const goal = 3;
 
     <p>My skills are:</p>
     <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
     </ul>
 
     {happy && <p>I am happy to be learning Astro!</p>}
@@ -80,6 +100,5 @@ const goal = 3;
         <p>My goal is not 3 days.</p>
       )
     }
-
   </body>
 </html>
