--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,3 +21,8 @@ const username = "withastro";
     <Social platform="youtube" username="astrodotbuild" />
   </p>
 </footer>
+
+<!-- Use the hoisted technique -->
+<script>
+  import "../scripts/menu.js";
+</script>
