--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,8 +3,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 
-const { pageTitle } = Astro.props;
-
+const { frontmatter } = Astro.props;
 ---
 
 <html lang="en">
@@ -13,11 +12,28 @@ const { pageTitle } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
+    <title>{frontmatter.title}</title>
   </head>
   <body>
     <Header />
-    <h1>{pageTitle}</h1>
+
+    <h1>{frontmatter.title}</h1>
+    <p>
+      Published on: {frontmatter.pubDate.slice(0, 10)}
+    </p>
+    <p><em>{frontmatter.description}</em></p>
+    <p>Written by: {frontmatter.author}</p>
+
+    <!-- Display image (if present) -->
+    {
+      frontmatter.image && (
+        <img
+          src={frontmatter.image.url}
+          width="300"
+          alt={frontmatter.image.alt}
+        />
+      )
+    }
 
     <slot />
 
