[4.4] Nesting of layouts

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,45 +1,26 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import "../styles/global.css";
+import BaseLayout from "./BaseLayout.astro";
 
 const { frontmatter } = Astro.props;
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{frontmatter.title}</title>
-  </head>
-  <body>
-    <Header />
+<BaseLayout pageTitle={frontmatter.title}>
+  <p>
+    Published on: {frontmatter.pubDate.slice(0, 10)}
+  </p>
+  <p><em>{frontmatter.description}</em></p>
+  <p>Written by: {frontmatter.author}</p>
 
-    <h1>{frontmatter.title}</h1>
-    <p>
-      Published on: {frontmatter.pubDate.slice(0, 10)}
-    </p>
-    <p><em>{frontmatter.description}</em></p>
-    <p>Written by: {frontmatter.author}</p>
+  <!-- Display image (if present) -->
+  {
+    frontmatter.image && (
+      <img
+        src={frontmatter.image.url}
+        width="300"
+        alt={frontmatter.image.alt}
+      />
+    )
+  }
 
-    <!-- Display image (if present) -->
-    {
-      frontmatter.image && (
-        <img
-          src={frontmatter.image.url}
-          width="300"
-          alt={frontmatter.image.alt}
-        />
-      )
-    }
-
-    <slot />
-
-    <Footer />
-    <script>
-      import "../scripts/menu.js";
-    </script>
-  </body>
-</html>
+  <slot />
+</BaseLayout>
